--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -61,6 +61,32 @@
     width: 300px;
     height: 200px;
 }
+.contents {
+    padding: 1em;
+}
+.dialogTitle h4 {
+    color: #333;
+    margin: 0;
+    text-align: center;
+}
+.dialogForm {
+    padding: 1em 0 0.5em 0;
+}
+.dialogForm textarea {
+    width: 100%;
+    height: 5em;
+    font-size: 16px;
+}
+.dialogAction {
+    display: flex;
+    justify-content: flex-end;
+}
+.dialogAction button {
+    padding: 1em 2em;
+    border-radius: 8px;
+}
+
+
 .new::after {
     content: 'new';
     display: inline-block;
@@ -96,4 +122,20 @@
 }
 .error {
     text-align: center;
+}
+.loader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 20;
+}
+.adding {
+    background-color: #0006;
+    padding: 2em;
+    border-radius: 6px;
 }
